Add Layout Templet

--- a/HomeFlex/Views/Home/Contact.cshtml
+++ b/HomeFlex/Views/Home/Contact.cshtml
@@ -1,4 +1,4 @@
-﻿@{
+﻿@*@{
     ViewBag.Title = "Contact";
 }
 <main aria-labelledby="title">
@@ -16,4 +16,4 @@
         <strong>Support:</strong>   <a href="mailto:Support@example.com">Support@example.com</a><br />
         <strong>Marketing:</strong> <a href="mailto:Marketing@example.com">Marketing@example.com</a>
     </address>
-</main>
+</main>*@
