--- a/HomeFlex/Views/Home/About.cshtml
+++ b/HomeFlex/Views/Home/About.cshtml
@@ -1,4 +1,4 @@
-﻿@{
+﻿@*@{
     ViewBag.Title = "About";
 }
 <main aria-labelledby="title">
@@ -6,4 +6,4 @@
     <h3>@ViewBag.Message</h3>
 
     <p>Use this area to provide additional information.</p>
-</main>
+</main>*@
