--- a/HomeFlex/Views/Home/Index.cshtml
+++ b/HomeFlex/Views/Home/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@{
+﻿@*@{
     ViewBag.Title = "Home Page";
 }
 
@@ -30,4 +30,4 @@
             <p><a class="btn btn-outline-dark" href="https://go.microsoft.com/fwlink/?LinkId=301867">Learn more &raquo;</a></p>
         </section>
     </div>
-</main>
+</main>*@
